--- a/index.html
+++ b/index.html
@@ -37,12 +37,13 @@
   <img src="myphoto.jpeg" alt="Main Photo" class="main-photo">
 
   <!-- Greeting -->
-  <h1>🎉 Welcome to My Website 🎶</h1>
+  <h1>🎉 Happy birthday my uyiree 🎶</h1>
 
   <!-- Auto-playing Song -->
   <audio autoplay loop>
-    <source src="song.mp3" type="audio/mpeg">
+    <source src="song.mpeg" type="audio/mpeg">
     Your browser does not support the audio element.
   </audio>
 </body>
+
 </html>
